2008-11-26	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/xfce-notify-window.c: Don't set the legacy window
	  shape when the widget is composited (fixes drawing artifacts with
	  the curved corners).  Also simplify the painting code a bit when
	  the widget is *not* composited; should be a little faster and will
	  probably look better too.

2008-11-26	Brian J. Tarricone <bjt23@cornell.edu>

	* configure.ac.in: Add 'git' version tag.
	* xfce4-notifyd-config/xfce4-notifyd-config.1: Add man page,
	  submitted by Evgeni Golov <sargentd@die-welt.net>.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* configure.ac.in: Remove 'git' version tag for 0.1.0 release.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* {icons/48x48,xfce4-notifyd}/Makefile.am: Fix make distcheck.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* icons/48x48/xfce4-notifyd.png: Add app icon.
	* xfce4-notifyd-config/xfce4-notifyd-config.desktop.in: Set
	  Icon= key.
	* configure.ac.in,Makefile.am: Add icons subdir to build.

2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Fix dialog
	  layout spacing and add scrolled window shadow.

2008-11-21	Brian J. Tarricone <bjt23@cornell.edu>

	* Makefile.am: Add release targets.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/main.c: Remove a couple strings.
	* po/xfce4-notifyd.pot: Update .pot file.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* NEWS: Add NEWS file for first release.
	* xfce4-notifyd-config/main.c: Sort items in the themes list.

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd/{org.freedesktop.Notifications.service.in,Makefile.am}:
	  Install xfce4-notifyd to $libexecdir instead of $bindir

2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>

	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Change window
	  title to simply 'Notifications'
	* po/xfce4-notifyd.pot: Update .pot file
